# net_hook_redirect

./: .gitignore  README.md  build.bat
src/: CMakeLists.txt  RemThreadInjector.cpp  RemThreadInjector.h  base.h  hook_dll.cpp  hook_redirect.cpp  test_target.cpp
src/C_log/: log.cpp  log.h
src/C_log/include/: api_log.h  api_log_demo.h
